--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -150,9 +150,9 @@ client.setEnvironment('euc2.pure.cloud');
 			//document.querySelector('a').onclick = 
 	 			
 				var href = document.querySelector('a').id;
-				alert('You clicked: ' + href);
+				//alert('You clicked: ' + href);
 				let body = {
-				'phoneNumber':(href.substring(5))
+				'phoneNumber':(href)
 					
 					};
 				console.log('phoneNumber: ', body);
