--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -92,15 +92,15 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Laurent Pret</td>
-    <td><a href='+447468694808' onclick='e()'>Click to Call</a></td>
+    <td><a id='+447468694808' onclick='dial()'>Click to Call</a></td>
   </tr>
   <tr>
     <td>Kameliya Karakasheva</td>
-    <td><a href='tel:+41797228737' onclick='dial()'>Click to Call</a></td>
+    <td><a id='tel:+41797228737' onclick='dial()'>Click to Call</a></td>
   </tr>
   <tr>
     <td>Krzysztof Kułton</td>
-    <td><a href='+48881821276'>Click to Call</a></td>
+    <td><a id='+48881821276' onclick='dial()'>Click to Call</a></td>
   </tr>
 </table>
 </body>
