--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -96,7 +96,7 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Kameliya Karakasheva</td>
-    <td><a id='tel:+41797228737' onclick='dial()'>Click to Call</a></td>
+    <td><a id='+41797228737' onclick='dial()'>Click to Call</a></td>
   </tr>
   <tr>
     <td>Krzysztof Kułton</td>
