--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -88,19 +88,19 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Anna Guida</td>
-    <td><button id='+491754316729' onclick='dial()'>Click to Call</button></td>
+    <td><button value='+491754316729' onclick='dial()'>Click to Call</button></td>
   </tr>
   <tr>
     <td>Laurent Pret</td>
-    <td><button id='+447468694808' onclick='dial()'>Click to Call</button></td>
+    <td><button value='+447468694808' onclick='dial()'>Click to Call</button></td>
   </tr>
   <tr>
     <td>Kameliya Karakasheva</td>
-    <td><button id='+41797228737' onclick='dial()'>Click to Call</button></td>
+    <td><button value='+41797228737' onclick='dial()'>Click to Call</button></td>
   </tr>
   <tr>
     <td>Krzysztof Kułton</td>
-    <td><button id='+48881821276' onclick='dial()'>Click to Call</button></td>
+    <td><button value='+48881821276' onclick='dial()'>Click to Call</button></td>
   </tr>
 </table>
 </body>
