--- a/UBSPOC/directorydemo.html
+++ b/UBSPOC/directorydemo.html
@@ -149,8 +149,8 @@ client.loginImplicitGrant(clientId, redirectUri)
     let elem = document.createElement("script");
     elem.setAttribute("type","text/javascript");
     elem.src = "./widgets.ubs.demo.js"
-    document.head.appendChild(elem);*/
- }		
+    document.head.appendChild(elem);
+ }		*/
 			
         </script>
     </body>
