--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -75,7 +75,7 @@
       <label for="iban">IBAN: </label>
       <input id="iban" type="text" name="iban" value="" size="30" maxlength="30" />
 	<br></br>
-      <label for="telefono">Phone/Email: </label>
+      <label for="telefono">Phone/Email:</label>
       <input id="telefono" type="text" name="telefono" value="" size="30" maxlength="30" /> 
 	<br></br>
     </fieldset>
@@ -139,7 +139,10 @@ client.loginImplicitGrant(
 
 
     if (caller) {
+	    let media = null;
+	  media= caller.getQueueMediaType();
          ani = caller.ani;
+	    console.log('mediatype:', media);
         console.log('Caller ANI:', ani);
 		document.getElementById("telefono").value = ani.substring(5);
     }
