--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -99,6 +99,7 @@ const platformClient = require('platformClient');
 const client = platformClient.ApiClient.instance;
 let conversationId = '73e22507-062a-477b-880b-05f8d4ea2c78'; // String | conversation ID
 let ani = '+123456';
+let media = null;
 // API instances
 const usersApi = new platformClient.UsersApi();
 const conversationsApi = new platformClient.ConversationsApi();
@@ -139,8 +140,8 @@ client.loginImplicitGrant(
 
 
     if (caller) {
-	    let media = null;
-	  media= caller.getQueueMediaType();
+	    
+	  media= caller.getMediaType();
          ani = caller.ani;
 	    console.log('mediatype:', media);
         console.log('Caller ANI:', ani);
