--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -99,7 +99,6 @@ const platformClient = require('platformClient');
 const client = platformClient.ApiClient.instance;
 let conversationId = '73e22507-062a-477b-880b-05f8d4ea2c78'; // String | conversation ID
 let ani = '+123456';
-let media = null;
 // API instances
 const usersApi = new platformClient.UsersApi();
 const conversationsApi = new platformClient.ConversationsApi();
@@ -136,16 +135,13 @@ client.loginImplicitGrant(
   .then((data) => {
     console.log(`getConversation success! data: ${JSON.stringify(data, null, 2)}`);
 	const caller = data.participants.find(p =>
-	p.purpose === 'customer' || p.purpose === 'caller');
+	p.purpose === 'customer');
 
 
     if (caller) {
-	    
-	  media= caller.getMediaType();
          ani = caller.ani;
-	    console.log('mediatype:', media);
         console.log('Caller ANI:', ani);
-		document.getElementById("telefono").value = ani.substring(5);
+	document.getElementById("telefono").value = ani.substring(5);
     }
 })
 .catch((err) => console.error(err));
