--- a/PS07/crmps07.html
+++ b/PS07/crmps07.html
@@ -74,7 +74,7 @@ client.loginImplicitGrant(
     if (caller) {
          ani = caller.ani;
         console.log('Caller ANI:', ani);
-		document.getElementById("telefono").value = ani.substring(5);
+		ani = ani.substring(5);
     }
 })
 .catch((err) => console.error(err));
