--- a/PS07/crmps07.html
+++ b/PS07/crmps07.html
@@ -34,7 +34,7 @@
 
 const platformClient = require('platformClient');
 const client = platformClient.ApiClient.instance;
-let ani ;
+var ani ;
 // API instances
 
 const usersApi = new platformClient.UsersApi();
