--- a/PS07/crmps07.html
+++ b/PS07/crmps07.html
@@ -74,7 +74,7 @@ client.loginImplicitGrant(
     if (caller) {
          ani = caller.ani;
         ani = ani.substring(5);
-		console.log('Cut ANI:', ani);
+		console.log('new ANI:', ani);
     }
 })
 .catch((err) => console.error(err));
