--- a/PS07/crmps07.html
+++ b/PS07/crmps07.html
@@ -98,7 +98,7 @@ document.getElementById('iframecrm').src = iframe_url;
  
 let AddPartData = function () {
 let bodyset = {"attributes":{"NumberIn": "DE12345678","StringIn": "Identified"}};
-conversationsApi.patchConversationParticipantAttributes(currentConversationId, participantId, bodyset);
+conversationsApi.patchConversationParticipantAttributes(currentConversationId, participantId, bodyset)
  .then(() => {
     console.log('patchConversationParticipantAttributes returned successfully.');
   })
