--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -105,7 +105,7 @@ const conversationsApi = new platformClient.ConversationsApi();
 
 const urlParams = new URLSearchParams(window.location.search);
 currentConversationId = urlParams.get('conversationid');
-console.log('WorkItem ID: 'currentConversationId);
+console.log('WorkItem ID: ', currentConversationId);
 const redirectUri =  'https://annaguidagenesys.github.io/UBSPOC/crmdemo.html' ;
 
 client.setEnvironment('euc2.pure.cloud');
