--- a/PS07/crmps07.html
+++ b/PS07/crmps07.html
@@ -46,7 +46,8 @@ const conversationsApi = new platformClient.ConversationsApi();
 
 const urlParams = new URLSearchParams(window.location.search);
 currentConversationId = urlParams.get('conversationid');
-
+		console.log('TEST1:', currentConversationId);
+		
 const redirectUri =  'https://annaguidagenesys.github.io/PS07/crmps07.html' ;
 
 client.setEnvironment('mypurecloud.de');
@@ -60,7 +61,7 @@ client.loginImplicitGrant(
 
     // Assign conversation id
     currentConversationId = data.state;
-    
+    		console.log('TEST2:', currentConversationId);
     // Get Details of current User
    return usersApi.getUsersMe();
 }).then(userMe => {
