--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -111,6 +111,7 @@ const redirectUri =  'https://annaguidagenesys.github.io/UBSPOC/crmdemo.html' ;
 
 client.setEnvironment('euc2.pure.cloud');
 client.loginImplicitGrant('27b4cba3-cf71-40c2-8229-21624fed26dc', redirectUri,{state: currentConversationId, currentWorkitemId,currentInteractionType})
+if (currentInteractionType === 'conversation'){
 .then(data => {
 console.log(data);
 
