--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -143,6 +143,7 @@ conversationsApi.getConversation(currentConversationId)
 						     }
 	else {
 	console.log('WorkitemId:', currentWorkitemId);
+		console.log('WorkitemId:', currentInteractionType);
 	}					  
   })
   .catch((err) => {
