--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -110,25 +110,29 @@ currentWorkitemId = urlParams.get('workitemid');
 const redirectUri =  'https://annaguidagenesys.github.io/UBSPOC/crmdemo.html' ;
 
 client.setEnvironment('euc2.pure.cloud');
-client.loginImplicitGrant('27b4cba3-cf71-40c2-8229-21624fed26dc', redirectUri, {state: JSON.stringify({ conversationid:currentConversationId, workitemid: currentWorkitemId,interactiontype:currentInteractionType})})
+client.loginImplicitGrant('27b4cba3-cf71-40c2-8229-21624fed26dc', redirectUri, {state: 
+										JSON.stringify({ conversationid:currentConversationId,
+											         workitemid: currentWorkitemId,
+										                 interactiontype:currentInteractionType})})
 
 .then(data => {
 console.log(data);
 
-//Assign conversation id
-//currentConversationId = data.state;
-	
+
 let stateData = JSON.parse(data.state);
 currentConversationId = stateData.conversationid;
 currentWorkitemId = stateData.workitemid;
-currenttype = stateData.interactiontype;
-console.log('Workitem Type:', currentInteractionType);
-console.log('Workitem ID:', currentWorkitemId);	
-/Get Details of current User
+currentInteractionType = stateData.interactiontype;
+	
+console.log('Workitem Type + ID:', currentInteractionType + currentWorkitemId);
+
 return usersApi.getUsersMe();
+	
 }).then(userMe => {
+	userId = userMe.id;
 if (currentInteractionType == 'conversation'){	
-userId = userMe.id;
+
+	
 
  
 conversationsApi.getConversation(currentConversationId)
