--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -97,6 +97,7 @@ const platformClient = require('platformClient');
 const client = platformClient.ApiClient.instance;
 let conversationId = '73e22507-062a-477b-880b-05f8d4ea2c78'; // String | conversation ID
 let ani = '+123456';
+let ticketit='11111';
 
 // API instances
 const usersApi = new platformClient.UsersApi();
@@ -153,7 +154,16 @@ conversationsApi.getConversation(currentConversationId)
 						     }
 	else {
 	console.log('WorkitemId:', currentWorkitemId);
-		
+       let taskmgmtApi = new platformClient.TaskManagementApi();
+	taskmgmtApi.getTaskmanagementWorkitem(currentWorkitemId)
+		.then((data) => {
+		ticketit = data.customFields.ticketid_identifier
+    console.log(`getTaskmanagementWorkitem success! data: ${JSON.stringify(data, null, 2)}`);
+  })
+  .catch((err) => {
+    console.log("There was a failure calling getTaskmanagementWorkitem");
+    console.error(err);
+  });
 	}					  
   })
  .catch((err) => {
