--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -93,7 +93,8 @@
           
 
 				
-const platformClient = require('platformClient');
+//const platformClient = require('platformClient');
+const platformClient = require("purecloud-platform-client-v2");
 const client = platformClient.ApiClient.instance;
 let conversationId = '73e22507-062a-477b-880b-05f8d4ea2c78'; // String | conversation ID
 let ani = '+123456';
