--- a/UBSPOC/crmdemo.html
+++ b/UBSPOC/crmdemo.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Cache-control" content="no-cache">
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="https://sdk-cdn.mypurecloud.com/javascript/132.0.0/purecloud-platform-client-v2.min.js"></script>
+  <script src="https://sdk-cdn.mypurecloud.com/javascript/226.0.0/purecloud-platform-client-v2.min.js"></script>
   <script src="https://sdk-cdn.mypurecloud.com/client-apps/2.3.0/purecloud-client-app-sdk-70ec0c8b.min.js"></script>
   <script src="https://sdk-cdn.mypurecloud.com/client-apps/2.6.7/purecloud-client-app-sdk.js"></script>
 
@@ -93,8 +93,8 @@
           
 
 				
-//const platformClient = require('platformClient');
-const platformClient = require("purecloud-platform-client-v2");
+const platformClient = require('platformClient');
+//const platformClient = require("purecloud-platform-client-v2");
 const client = platformClient.ApiClient.instance;
 let conversationId = '73e22507-062a-477b-880b-05f8d4ea2c78'; // String | conversation ID
 let ani = '+123456';
