--- a/PS07/crmdemo.html
+++ b/PS07/crmdemo.html
@@ -27,7 +27,7 @@
     display: block;
     width: 337px;
     height: 96px;
-    background: url(UBS_Logo_Semibold.svg) no-repeat center;
+    background: url(genesys-com-full-color.svg) no-repeat center;
    }
    label {
     width: 80px;
